# final-year-project

./: .gitignore  README.md
agent/: FINE_TUNING_GUIDE.md  QUICKSTART.md  README.md  __init__.py  api.py  categorize_agent.py  config.py  graph.py  main.py  merchant_rules.py  models.py  pyproject.toml  requirements.txt  transactions.json
agent/fine_tuning/: train_template.py
agent/flows/: __init__.py  categorize_agent.py  chat_agent.py  extract_agent.py  vector_store.py
agent/nodes/: aggregate.py  categorize_llm.py  categorize_rules.py  categorize_web.py  load.py  parse.py
agent/routers/: __init__.py  categorize.py  chat.py  extract.py  health.py  report.py  vectors.py
agent/services/: llm.py  web.py
backend/: package-lock.json  package.example.json  package.json  server.example.js  server.js
backend/controllers/: authController.js  chatController.js  transactionController.js
backend/middleware/: auth.js
backend/models/: Transaction.js  User.js
backend/routes/: auth.js  chat.js  transactions.js
backend/scripts/: seedTransactions.js
frontend/: App.js  app.json  package-lock.json  package.json  tailwind.config.js
frontend/api/: client.js
frontend/app/: _layout.js  about.js  add-expense.js  all-transactions.js  budget.js  delete-account.js  edit-profile.js  help.js  index.js  privacy.js  reports.js
frontend/components/: Button.js  Input.js  PieChart.js  TransactionList.js  UploadModal.js
frontend/constants/: theme.ts
frontend/data/: mockData.ts
frontend/store/: authSlice.js  transactionSlice.js
frontend/types/: banking.ts  budgeting.ts
(+35 files in other folders)
